2019-11-22  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.c (pkl_ast_type_mappable_p): New function.
	* src/pkl-typify.c (pkl_typify1_ps_map): Check for types that
	cannot be mapped and error about it.
	* testsuite/poke.pkl/map-diag-3.pk: Likewise.
	* testsuite/poke.pkl/map-diag-2.pk: Likewise.
	* testsuite/poke.pkl/map-diag-1.pk: New test.
	* testsuite/poke.pkl/map-diag-7.pk: Likewise.
	* testsuite/poke.pkl/map-diag-6.pk: Likewise.
	* testsuite/poke.pkl/map-diag-5.pk: Likewise.
	* testsuite/poke.pkl/map-diag-4.pk: Likewise.

2019-11-22  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/struct-types-diag-8.pk: Rewrite.

2019-11-22  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y (offset_type_specifier): Allow simple types only
	for the offset unit.

2019-11-19 John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi: Add indeces.

2019-11-19 John Darrington <john@darrington.wattle.id.au>

        * src/pk-dump.pk (print_ascii): New function. (print_hex) New function.
        (print_data): Deal properly with EOF and data not ending on 16#B boundary.
        * testsuite/poke.cmd/dump-5.pk: New file.
        * testsuite/poke.cmd/dump-6.pk: New file.
        * testsuite/poke.cmd/dump-7.pk: New file.

2019-11-17 John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi (Standard Integral Types): Correct size of nibble.

2019-11-21  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Field Constraints): New section.

2019-11-15  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (__LINE__ and __FILE__): New chapter.

2019-11-15  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks: Fix handling of sboundm.
	* testsuite/poke.map/maps-arrays-16.pk: New test.

2019-11-15  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y: New tokens UU_LINE_UU and UU_FILE_UU.
	* src/pkl-lex.l: Rules for __FILE__ and for __LINE__.
	* testsuite/poke.pkl/uu-line-1.pk: New test.
	* testsuite/poke.pkl/uu-file-1.pk: Likewise.
